--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -127,343 +127,86 @@ logger:
   # Optional: Component specific logger overrides
   logs:
     frigate.event: debug
-
-# Optional: set environment variables
-# environment_vars:
-#   EXAMPLE_VAR: value
-
-# Optional: birdseye configuration
-# NOTE: Can (enabled, mode) be overridden at the camera level
 birdseye:
-  # Optional: Enable birdseye view (default: shown below)
   enabled: True
-  # Optional: Restream birdseye via RTSP (default: shown below)
-  # NOTE: Enabling this will set birdseye to run 24/7 which may increase CPU usage somewhat.
   restream: False
-  # Optional: Width of the output resolution (default: shown below)
   width: 1920
-  # Optional: Height of the output resolution (default: shown below)
   height: 1080
-  # Optional: Encoding quality of the mpeg1 feed (default: shown below)
-  # 1 is the highest quality, and 31 is the lowest. Lower quality feeds utilize less CPU resources.
   quality: 1
-  # Optional: Mode of the view. Available options are: objects, motion, and continuous
-  #   objects - cameras are included if they have had a tracked object within the last 30 seconds
-  #   motion - cameras are included if motion was detected in the last 30 seconds
-  #   continuous - all cameras are included always
   mode: motion
-
-# Optional: ffmpeg configuration
-# More information about presets at https://docs.frigate.video/configuration/ffmpeg_presets
 ffmpeg:
-  # Optional: global ffmpeg args (default: shown below)
   global_args: -hide_banner -loglevel warning -threads 2
-  # Optional: global hwaccel args (default: shown below)
-  # NOTE: See hardware acceleration docs for your specific device
   hwaccel_args: preset-nvidia-h265
-  # hwaccel_args: ["-vaapi_device", "/dev/dri/renderD128", "-hwaccel_output_format", "yuv420p"]
-  # Optional: global input args (default: shown below)
-  input_args: preset-rtsp-generic
-  # Optional: global output args
+  input_args: preset-rtsp-restream
   output_args:
-    # Optional: output args for detect streams (default: shown below)
     detect: -threads 2 -f rawvideo -pix_fmt yuv420p -an
-    # Optional: output args for record streams (default: shown below)
-    record: preset-record-generic-audio-aac
-    # Optional: output args for rtmp streams (default: shown below)
-    # rtmp: preset-rtmp-generic
-  # Optional: Time in seconds to wait before ffmpeg retries connecting to the camera. (default: shown below)
-  # If set too low, frigate will retry a connection to the camera's stream too frequently, using up the limited streams some cameras can allow at once
-  # If set too high, then if a ffmpeg crash or camera stream timeout occurs, you could potentially lose up to a maximum of retry_interval second(s) of footage
-  # NOTE: this can be a useful setting for Wireless / Battery cameras to reduce how much footage is potentially lost during a connection timeout.
-  # retry_interval: 10
-
-# Optional: Detect configuration
-# NOTE: Can be overridden at the camera level
+    record: preset-record-generic-audio-copy
 detect:
-  # Optional: width of the frame for the input with the detect role (default: use native stream resolution)
   width: 640
-  # # Optional: height of the frame for the input with the detect role (default: use native stream resolution)
   height: 360
-  # Optional: desired fps for your camera for the input with the detect role (default: shown below)
-  # NOTE: Recommended value of 5. Ideally, try and reduce your FPS on the camera.
   fps: 10
-  # Optional: enables detection for the camera (default: True)
   enabled: True
-  # Optional: Number of consecutive detection hits required for an object to be initialized in the tracker. (default: 1/2 the frame rate)
-  # min_initialized: 2
-  # Optional: Number of frames without a detection before Frigate considers an object to be gone. (default: 5x the frame rate)
-  # max_disappeared: 25
-  # Optional: Configuration for stationary object tracking
-  # stationary:
-    # Optional: Frequency for confirming stationary objects (default: same as threshold)
-    # When set to 1, object detection will run to confirm the object still exists on every frame.
-    # If set to 10, object detection will run to confirm the object still exists on every 10th frame.
-    # interval: 50
-    # Optional: Number of frames without a position change for an object to be considered stationary (default: 10x the frame rate or 10s)
-    # threshold: 50
-    # Optional: Define a maximum number of frames for tracking a stationary object (default: not set, track forever)
-    # This can help with false positives for objects that should only be stationary for a limited amount of time.
-    # It can also be used to disable stationary object tracking. For example, you may want to set a value for person, but leave
-    # car at the default.
-    # WARNING: Setting these values overrides default behavior and disables stationary object tracking.
-    #          There are very few situations where you would want it disabled. It is NOT recommended to
-    #          copy these values from the example config into your config unless you know they are needed.
-    # max_frames:
-    #   # Optional: Default for all object types (default: not set, track forever)
-    #   default: 3000
-    #   # Optional: Object specific values
-    #   objects:
-    #     person: 1000
-  # Optional: Milliseconds to offset detect annotations by (default: shown below).
-  # There can often be latency between a recording and the detect process,
-  # especially when using separate streams for detect and record.
-  # Use this setting to make the timeline bounding boxes more closely align
-  # with the recording. The value can be positive or negative.
-  # TIP: Imagine there is an event clip with a person walking from left to right.
-  #      If the event timeline bounding box is consistently to the left of the person
-  #      then the value should be decreased. Similarly, if a person is walking from
-  #      left to right and the bounding box is consistently ahead of the person
-  #      then the value should be increased.
-  # TIP: This offset is dynamic so you can change the value and it will update existing
-  #      events, this makes it easy to tune.
-  # WARNING: Fast moving objects will likely not have the bounding box align.
-  # annotation_offset: 0
-
-# Optional: Object configuration
-# NOTE: Can be overridden at the camera level
 objects:
-  # Optional: list of objects to track from labelmap.txt (default: shown below)
   track:
     - person
     - dog
     - car
     - bus
-  # Optional: mask to prevent all object types from being detected in certain areas (default: no mask)
-  # Checks based on the bottom center of the bounding box of the object.
-  # NOTE: This mask is COMBINED with the object type specific mask below
-  # mask: 0,0,1000,0,1000,200,0,200
-  # Optional: filters to reduce false positives for specific object types
-  # filters:
-  #   person:
-  #     # Optional: minimum width*height of the bounding box for the detected object (default: 0)
-  #     min_area: 5000
-  #     # Optional: maximum width*height of the bounding box for the detected object (default: 24000000)
-  #     max_area: 100000
-  #     # Optional: minimum width/height of the bounding box for the detected object (default: 0)
-  #     min_ratio: 0.5
-  #     # Optional: maximum width/height of the bounding box for the detected object (default: 24000000)
-  #     max_ratio: 2.0
-  #     # Optional: minimum score for the object to initiate tracking (default: shown below)
-  #     min_score: 0.5
-  #     # Optional: minimum decimal percentage for tracked object's computed score to be considered a true positive (default: shown below)
-  #     threshold: 0.7
-  #     # Optional: mask to prevent this object type from being detected in certain areas (default: no mask)
-  #     # Checks based on the bottom center of the bounding box of the object
-  #     # mask: 0,0,1000,0,1000,200,0,200
-
-# Optional: Motion configuration
-# NOTE: Can be overridden at the camera level
 motion:
-  # Optional: The threshold passed to cv2.threshold to determine if a pixel is different enough to be counted as motion. (default: shown below)
-  # Increasing this value will make motion detection less sensitive and decreasing it will make motion detection more sensitive.
-  # The value should be between 1 and 255.
   threshold: 30
-  # Optional: The percentage of the image used to detect lightning or other substantial changes where motion detection
-  #           needs to recalibrate. (default: shown below)
-  # Increasing this value will make motion detection more likely to consider lightning or ir mode changes as valid motion.
-  # Decreasing this value will make motion detection more likely to ignore large amounts of motion such as a person approaching
-  # a doorbell camera.
   lightning_threshold: 0.8
-  # Optional: Minimum size in pixels in the resized motion image that counts as motion (default: shown below)
-  # Increasing this value will prevent smaller areas of motion from being detected. Decreasing will
-  # make motion detection more sensitive to smaller moving objects.
-  # As a rule of thumb:
-  #  - 10 - high sensitivity
-  #  - 30 - medium sensitivity
-  #  - 50 - low sensitivity
   contour_area: 10
-  # Optional: Alpha value passed to cv2.accumulateWeighted when averaging frames to determine the background (default: shown below)
-  # Higher values mean the current frame impacts the average a lot, and a new object will be averaged into the background faster.
-  # Low values will cause things like moving shadows to be detected as motion for longer.
-  # https://www.geeksforgeeks.org/background-subtraction-in-an-image-using-concept-of-running-average/
   frame_alpha: 0.01
-  # Optional: Height of the resized motion frame  (default: 100)
-  # Higher values will result in more granular motion detection at the expense of higher CPU usage.
-  # Lower values result in less CPU, but small changes may not register as motion.
   frame_height: 150
-  # Optional: motion mask
-  # NOTE: see docs for more detailed info on creating masks
-  # mask:
-  #   - 0,49,84,0,592,0,437,82,375,42,174,127,194,206,0,310
-  #   - 293,360,342,317,356,202,456,133,489,139,530,89,563,91,640,0,591,0,439,80,0,318,0,360
-  # Optional: improve contrast (default: shown below)
-  # Enables dynamic contrast improvement. This should help improve night detections at the cost of making motion detection more sensitive
-  # for daytime.
   improve_contrast: True
-  # Optional: Delay when updating camera motion through MQTT from ON -> OFF (default: shown below).
-  # mqtt_off_delay: 30
-
-# Optional: Record configuration
-# NOTE: Can be overridden at the camera level
 record:
-  # Optional: Enable recording (default: shown below)
-  # WARNING: If recording is disabled in the config, turning it on via
-  #          the UI or MQTT later will have no effect.
   enabled: True
-  # Optional: Number of minutes to wait between cleanup runs (default: shown below)
-  # This can be used to reduce the frequency of deleting recording segments from disk if you want to minimize i/o
   expire_interval: 60
-  # Optional: Sync recordings with disk on startup and once a day (default: shown below).
   sync_recordings: True
-  # Optional: Retention settings for recording
   retain:
-    # Optional: Number of days to retain recordings regardless of events (default: shown below)
-    # NOTE: This should be set to 0 and retention should be defined in events section below
-    #       if you only want to retain recordings of events.
     days: 30
-    # Optional: Mode for retention. Available options are: all, motion, and active_objects
-    #   all - save all recording segments regardless of activity
-    #   motion - save all recordings segments with any detected motion
-    #   active_objects - save all recording segments with active/moving objects
-    # NOTE: this mode only applies when the days setting above is greater than 0
     mode: all
-  # Optional: Recording Export Settings
   export:
-    # Optional: Timelapse Output Args (default: shown below).
-    # NOTE: The default args are set to fit 24 hours of recording into 1 hour playback.
-    # See https://stackoverflow.com/a/58268695 for more info on how these args work.
-    # As an example: if you wanted to go from 24 hours to 30 minutes that would be going
-    # from 86400 seconds to 1800 seconds which would be 1800 / 86400 = 0.02.
-    # The -r (framerate) dictates how smooth the output video is.
-    # So the args would be -vf setpts=0.02*PTS -r 30 in that case.
     timelapse_args: "-vf setpts=0.04*PTS -r 30"
-  # Optional: Event recording settings
   events:
-    # Optional: Number of seconds before the event to include (default: shown below)
-    # pre_capture: 5
-    # Optional: Number of seconds after the event to include (default: shown below)
-    # post_capture: 5
-    # Optional: Objects to save recordings for. (default: all tracked objects)
-    # objects:
-    #   - person
-    # Optional: Restrict recordings to objects that entered any of the listed zones (default: no required zones)
-    # required_zones: []
-    # Optional: Retention settings for recordings of events
     retain:
-      # Required: Default retention days (default: shown below)
       default: 30
-      # Optional: Mode for retention. (default: shown below)
-      #   all - save all recording segments for events regardless of activity
-      #   motion - save all recordings segments for events with any detected motion
-      #   active_objects - save all recording segments for event with active/moving objects
-      #
-      # NOTE: If the retain mode for the camera is more restrictive than the mode configured
-      #       here, the segments will already be gone by the time this mode is applied.
-      #       For example, if the camera retain mode is "motion", the segments without motion are
-      #       never stored, so setting the mode to "all" here won't bring them back.
       mode: active_objects
-      # Optional: Per object retention days
-      # objects:
-      #   person: 30
-      #   car: 30
-      #   bus: 30
-
-# Optional: Configuration for the jpg snapshots written to the clips directory for each event
-# NOTE: Can be overridden at the camera level
 snapshots:
-  # Optional: Enable writing jpg snapshot to /media/frigate/clips (default: shown below)
   enabled: True
-  # Optional: save a clean PNG copy of the snapshot image (default: shown below)
   clean_copy: True
-  # Optional: print a timestamp on the snapshots (default: shown below)
   timestamp: False
-  # Optional: draw bounding box on the snapshots (default: shown below)
   bounding_box: True
-  # Optional: crop the snapshot (default: shown below)
   crop: False
-  # Optional: height to resize the snapshot to (default: original size)
-  # height: 175
-  # Optional: Restrict snapshots to objects that entered any of the listed zones (default: no required zones)
   required_zones: []
-  # Optional: Camera override for retention settings (default: global values)
   retain:
-    # Required: Default retention days (default: shown below)
     default: 30
-    # Optional: Per object retention days
     objects:
       person: 30
-  # Optional: quality of the encoded jpeg, 0-100 (default: shown below)
   quality: 90
-
-# Optional: RTMP configuration
-# NOTE: RTMP is deprecated in favor of restream
-# NOTE: Can be overridden at the camera level
-# rtmp:
-  # Optional: Enable the RTMP stream (default: False)
-  # enabled: False
-
-# Optional: Restream configuration
-# Uses https://github.com/AlexxIT/go2rtc (v1.8.3)
 go2rtc:
   streams:
     gates_hq:
       - rtsp://admin:12332145@192.168.108.103:8554/Streaming/Channels/101
-      - "ffmpeg:gates_hq#video=h265#hardware#audio=aac#hardware"
+      - "ffmpeg:gates_hq#video=h265#hardware#audio=aac"
       # - "ffmpeg:rtsp://admin:12332145@192.168.108.103:8554/Streaming/Channels/101#video=h265#hardware#audio=copy#audio=aac"
     gates_lq:
       - rtsp://admin:12332145@192.168.108.103:8554/Streaming/Channels/102
-      - "ffmpeg:gates_lq#video=h265#hardware#audio=aac#hardware"
+      - "ffmpeg:gates_lq#video=h265#hardware#audio=aac"
       # - "ffmpeg:rtsp://admin:12332145@192.168.108.103:8554/Streaming/Channels/102#video=h265#hardware#audio=copy#audio=aac"
     door_hq:
       - rtsp://192.168.108.197:554/user=admin_password=A2DyfFrG_channel=0_stream=0&onvif=0.sdp?real_stream
-      - "ffmpeg:door_hq#video=h265#hardware#audio=aac#hardware"
+      - "ffmpeg:door_hq#video=h265#hardware#audio=aac"
     door_lq:
       - rtsp://192.168.108.197:554/user=admin_password=A2DyfFrG_channel=0_stream=1&onvif=0.sdp?real_stream
-      - "ffmpeg:door_lq#video=h265#hardware#audio=aac#hardware"
+      - "ffmpeg:door_lq#video=h265#hardware#audio=aac"
   webrtc:
     candidates:
       - 192.168.108.55:8555
       - stun:8555
-
-# Optional: jsmpeg stream configuration for WebUI
 live:
-  # Optional: Set the name of the stream that should be used for live view
-  # in frigate WebUI. (default: name of camera)
   stream_name: gates_hq
-  # Optional: Set the height of the jsmpeg stream. (default: 720)
-  # This must be less than or equal to the height of the detect stream. Lower resolutions
-  # reduce bandwidth required for viewing the jsmpeg stream. Width is computed to match known aspect ratio.
-  # height: 1080
-  # Optional: Set the encode quality of the jsmpeg stream (default: shown below)
-  # 1 is the highest quality, and 31 is the lowest. Lower quality feeds utilize less CPU resources.
   quality: 1
-
-# Optional: in-feed timestamp style configuration
-# NOTE: Can be overridden at the camera level
-# timestamp_style:
-#   # Optional: Position of the timestamp (default: shown below)
-#   #           "tl" (top left), "tr" (top right), "bl" (bottom left), "br" (bottom right)
-#   position: "tl"
-#   # Optional: Format specifier conform to the Python package "datetime" (default: shown below)
-#   #           Additional Examples:
-#   #             german: "%d.%m.%Y %H:%M:%S"
-#   format: "%m/%d/%Y %H:%M:%S"
-#   # Optional: Color of font
-#   color:
-#     # All Required when color is specified (default: shown below)
-#     red: 255
-#     green: 255
-#     blue: 255
-#   # Optional: Line thickness of font (default: shown below)
-#   thickness: 2
-#   # Optional: Effect of lettering (default: shown below)
-#   #           None (No effect),
-#   #           "solid" (solid background in inverse color of font)
-#   #           "shadow" (shadow for font)
-#   effect: None
-
-# Required
 cameras:
   gates:
     enabled: True
