--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -136,7 +136,7 @@ birdseye:
   mode: motion
 ffmpeg:
   global_args: -hide_banner -loglevel warning -threads 2
-  hwaccel_args: preset-nvidia-h264
+  hwaccel_args: preset-nvidia-h265
   input_args: preset-rtsp-restream
   output_args:
     detect: -threads 2 -f rawvideo -pix_fmt yuv420p -an
@@ -188,18 +188,18 @@ go2rtc:
   streams:
     gates_hq:
       - rtsp://admin:12332145@192.168.108.103:8554/Streaming/Channels/101
-      - "ffmpeg:gates_hq#video=h264#hardware#audio=aac"
+      - "ffmpeg:gates_hq#video=copy#audio=aac"
       # - "ffmpeg:rtsp://admin:12332145@192.168.108.103:8554/Streaming/Channels/101#video=h265#hardware#audio=copy#audio=aac"
     gates_lq:
       - rtsp://admin:12332145@192.168.108.103:8554/Streaming/Channels/102
-      - "ffmpeg:gates_lq#video=h264#hardware#audio=aac"
+      - "ffmpeg:gates_lq#video=copy#audio=aac"
       # - "ffmpeg:rtsp://admin:12332145@192.168.108.103:8554/Streaming/Channels/102#video=h265#hardware#audio=copy#audio=aac"
     door_hq:
       - rtsp://192.168.108.197:554/user=admin_password=A2DyfFrG_channel=0_stream=0&onvif=0.sdp?real_stream
-      - "ffmpeg:door_hq#video=h264#hardware#audio=aac"
+      - "ffmpeg:door_hq#video=copy#audio=aac"
     door_lq:
       - rtsp://192.168.108.197:554/user=admin_password=A2DyfFrG_channel=0_stream=1&onvif=0.sdp?real_stream
-      - "ffmpeg:door_lq#video=h264#hardware#audio=aac"
+      - "ffmpeg:door_lq#video=copy#audio=aac"
   webrtc:
     candidates:
       - 192.168.108.55:8555
