--- a/kubernetes/apps/home/scrypted/app/pvc.yaml
+++ b/kubernetes/apps/home/scrypted/app/pvc.yaml
@@ -7,7 +7,7 @@ spec:
   accessModes: ["ReadWriteOnce"]
   resources:
     requests:
-      storage: 256Mi
+      storage: 1Gi
   storageClassName: longhorn-fast
 ---
 apiVersion: v1
