--- a/kubernetes/apps/home/scrypted/app/helmrelease.yaml
+++ b/kubernetes/apps/home/scrypted/app/helmrelease.yaml
@@ -88,6 +88,6 @@ spec:
         globalMounts:
           - path: /.npm
       recs:
-        existingClaim: suv-storage
+        existingClaim: scrypted-storage
         globalMounts:
           - path: /media
