--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -118,12 +118,12 @@ go2rtc:
     door_lq:
       - rtsp://192.168.108.197:554/user=admin_password=A2DyfFrG_channel=0_stream=1&onvif=0.sdp?real_stream
       - "ffmpeg:door_lq#video=h264#hardware#audio=aac"
-    dvor_hq:
+    dvor_gates_hq:
       - rtsp://192.168.108.150:554/user=admin_password=A2DyfFrG_channel=0_stream=0&onvif=0.sdp?real_stream
-      - "ffmpeg:dvor_hq#video=h264#hardware#audio=aac"
-    dvor_lq:
+      - "ffmpeg:dvor_gates_hq#video=h264#hardware#audio=aac"
+    dvor_gates_lq:
       - rtsp://192.168.108.150:554/user=admin_password=A2DyfFrG_channel=0_stream=1&onvif=0.sdp?real_stream
-      - "ffmpeg:dvor_lq#video=h264#hardware#audio=aac"
+      - "ffmpeg:dvor_gates_lq#video=h264#hardware#audio=aac"
     dom2_hq:
       - rtsp://192.168.108.122:554/user=admin_password=A2DyfFrG_channel=0_stream=0&onvif=0.sdp?real_stream
       - "ffmpeg:dom2_hq#video=h264#hardware#audio=aac"
@@ -243,7 +243,7 @@ cameras:
       required_zones: []
     birdseye:
       order: 0
-  dvor:
+  dvor_gates:
     enabled: True
     ffmpeg:
       inputs:
@@ -257,7 +257,7 @@ cameras:
           roles:
             - detect
     live:
-      stream_name: dvor_hq
+      stream_name: dvor_gates_hq
       quality: 1
     best_image_timeout: 60
     webui_url: ""
