--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -193,7 +193,7 @@ cameras:
       stream_name: door_hq
       quality: 1
     best_image_timeout: 60
-    webui_url: ""
+    webui_url: "http://192.168.108.197:8899/"
     motion:
       mask: []
     zones:
@@ -260,7 +260,7 @@ cameras:
       stream_name: dvor_gates_hq
       quality: 1
     best_image_timeout: 60
-    webui_url: ""
+    webui_url: "http://192.168.108.150:8899/"
     motion:
       mask: []
   dom2:
@@ -280,7 +280,7 @@ cameras:
       stream_name: dom2_hq
       quality: 1
     best_image_timeout: 60
-    webui_url: ""
+    webui_url: "http://192.168.108.122:8899/"
     motion:
       mask: []
 ui:
