--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -114,22 +114,22 @@ go2rtc:
       # - "ffmpeg:rtsp://admin:12332145@192.168.108.103:8554/Streaming/Channels/102#video=h265#hardware#audio=copy#audio=aac"
     door_hq:
       - rtsp://192.168.108.197:554/user=admin_password=A2DyfFrG_channel=0_stream=0&onvif=0.sdp?real_stream
-      - "ffmpeg:door_hq#video=h264#hardware#audio=aac"
+      - "ffmpeg:door_hq#video=h264#hardware#audio=aac#audio=opus"
     door_lq:
       - rtsp://192.168.108.197:554/user=admin_password=A2DyfFrG_channel=0_stream=1&onvif=0.sdp?real_stream
-      - "ffmpeg:door_lq#video=h264#hardware#audio=aac"
+      - "ffmpeg:door_lq#video=h264#hardware#audio=aac#audio=opus"
     dvor_gates_hq:
       - rtsp://192.168.108.150:554/user=admin_password=A2DyfFrG_channel=0_stream=0&onvif=0.sdp?real_stream
-      - "ffmpeg:dvor_gates_hq#video=h264#hardware#audio=aac"
+      - "ffmpeg:dvor_gates_hq#video=h264#hardware#audio=aac#audio=opus"
     dvor_gates_lq:
       - rtsp://192.168.108.150:554/user=admin_password=A2DyfFrG_channel=0_stream=1&onvif=0.sdp?real_stream
-      - "ffmpeg:dvor_gates_lq#video=h264#hardware#audio=aac"
+      - "ffmpeg:dvor_gates_lq#video=h264#hardware#audio=aac#audio=opus"
     dom2_hq:
       - rtsp://192.168.108.122:554/user=admin_password=A2DyfFrG_channel=0_stream=0&onvif=0.sdp?real_stream
-      - "ffmpeg:dom2_hq#video=h264#hardware#audio=aac"
+      - "ffmpeg:dom2_hq#video=h264#hardware#audio=aac#audio=opus"
     dom2_lq:
       - rtsp://192.168.108.122:554/user=admin_password=A2DyfFrG_channel=0_stream=0&onvif=0.sdp?real_stream
-      - "ffmpeg:dom2_lq#video=h264#hardware#audio=aac"
+      - "ffmpeg:dom2_lq#video=h264#hardware#audio=aac#audio=opus"
   webrtc:
     candidates:
       - 192.168.108.55:8555
