--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -53,7 +53,7 @@ birdseye:
   mode: motion
 ffmpeg:
   global_args: -hide_banner -loglevel warning -threads 2
-  hwaccel_args: preset-nvidia-h265
+  hwaccel_args: preset-nvidia-h264
   input_args: preset-rtsp-restream
   output_args:
     detect: -threads 2 -f rawvideo -pix_fmt yuv420p -an
@@ -113,23 +113,29 @@ go2rtc:
       - "ffmpeg:gates_lq#video=copy#audio=aac"
       # - "ffmpeg:rtsp://admin:12332145@192.168.108.103:8554/Streaming/Channels/102#video=h265#hardware#audio=copy#audio=aac"
     door_hq:
-      - rtsp://192.168.108.197:554/user=admin_password=A2DyfFrG_channel=0_stream=0&onvif=0.sdp?real_stream
-      - "ffmpeg:door_hq#video=h264#hardware#audio=aac#audio=opus"
+      # - rtsp://192.168.108.197:554/user=admin_password=A2DyfFrG_channel=0_stream=0&onvif=0.sdp?real_stream
+      # - "ffmpeg:door_hq#video=h264#hardware#audio=aac#audio=opus"\
+      - "ffmpeg:rtsp://192.168.108.197:554/user=admin_password=A2DyfFrG_channel=0_stream=0&onvif=0.sdp?real_stream#video=h264#hardware#audio=copy#audio=aac"
     door_lq:
-      - rtsp://192.168.108.197:554/user=admin_password=A2DyfFrG_channel=0_stream=1&onvif=0.sdp?real_stream
-      - "ffmpeg:door_lq#video=h264#hardware#audio=aac#audio=opus"
+      # - rtsp://192.168.108.197:554/user=admin_password=A2DyfFrG_channel=0_stream=1&onvif=0.sdp?real_stream
+      # - "ffmpeg:door_lq#video=h264#hardware#audio=aac#audio=opus"
+      - "ffmpeg:rtsp://192.168.108.197:554/user=admin_password=A2DyfFrG_channel=0_stream=1&onvif=0.sdp?real_stream#video=h264#hardware#audio=copy#audio=aac"
     dvor_gates_hq:
-      - rtsp://192.168.108.150:554/user=admin_password=A2DyfFrG_channel=0_stream=0&onvif=0.sdp?real_stream
-      - "ffmpeg:dvor_gates_hq#video=h264#hardware#audio=aac#audio=opus"
+      # - rtsp://192.168.108.150:554/user=admin_password=A2DyfFrG_channel=0_stream=0&onvif=0.sdp?real_stream
+      # - "ffmpeg:dvor_gates_hq#video=h264#hardware#audio=aac#audio=opus"
+      - "ffmpeg:rtsp://192.168.108.150:554/user=admin_password=A2DyfFrG_channel=0_stream=0&onvif=0.sdp?real_stream#video=h264#hardware#audio=copy#audio=aac"
     dvor_gates_lq:
-      - rtsp://192.168.108.150:554/user=admin_password=A2DyfFrG_channel=0_stream=1&onvif=0.sdp?real_stream
-      - "ffmpeg:dvor_gates_lq#video=h264#hardware#audio=aac#audio=opus"
+      # - rtsp://192.168.108.150:554/user=admin_password=A2DyfFrG_channel=0_stream=1&onvif=0.sdp?real_stream
+      # - "ffmpeg:dvor_gates_lq#video=h264#hardware#audio=aac#audio=opus"
+      - "ffmpeg:rtsp://192.168.108.150:554/user=admin_password=A2DyfFrG_channel=0_stream=1&onvif=0.sdp?real_stream#video=h264#hardware#audio=copy#audio=aac"
     dom2_hq:
-      - rtsp://192.168.108.122:554/user=admin_password=A2DyfFrG_channel=0_stream=0&onvif=0.sdp?real_stream
-      - "ffmpeg:dom2_hq#video=h264#hardware#audio=aac#audio=opus"
+      # - rtsp://192.168.108.122:554/user=admin_password=A2DyfFrG_channel=0_stream=0&onvif=0.sdp?real_stream
+      # - "ffmpeg:dom2_hq#video=h264#hardware#audio=aac#audio=opus"
+      - "ffmpeg:rtsp://192.168.108.122:554/user=admin_password=A2DyfFrG_channel=0_stream=0&onvif=0.sdp?real_stream#video=h264#hardware#audio=copy#audio=aac"
     dom2_lq:
-      - rtsp://192.168.108.122:554/user=admin_password=A2DyfFrG_channel=0_stream=0&onvif=0.sdp?real_stream
-      - "ffmpeg:dom2_lq#video=h264#hardware#audio=aac#audio=opus"
+      # - rtsp://192.168.108.122:554/user=admin_password=A2DyfFrG_channel=0_stream=0&onvif=0.sdp?real_stream
+      # - "ffmpeg:dom2_lq#video=h264#hardware#audio=aac#audio=opus"
+      - "ffmpeg:rtsp://192.168.108.122:554/user=admin_password=A2DyfFrG_channel=0_stream=1&onvif=0.sdp?real_stream#video=h264#hardware#audio=copy#audio=aac"
   webrtc:
     candidates:
       - 192.168.108.55:8555
