--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -112,22 +112,22 @@ go2rtc:
       - "ffmpeg:gates_lq#video=copy#audio=aac"
     door_hq:
       - rtsp://192.168.108.197:554/user=admin_password=A2DyfFrG_channel=0_stream=0&onvif=0.sdp?real_stream
-      - "ffmpeg:door_hq#video=h264#hardware#audio=opus"
+      - "ffmpeg:door_hq#audio=opus#video=h264#hardware"
     door_lq:
       - rtsp://192.168.108.197:554/user=admin_password=A2DyfFrG_channel=0_stream=1&onvif=0.sdp?real_stream
-      - "ffmpeg:door_lq#video=h264#hardware#audio=opus"
+      - "ffmpeg:door_lq#audio=opus#video=h264#hardware"
     dvor_gates_hq:
       - rtsp://192.168.108.150:554/user=admin_password=A2DyfFrG_channel=0_stream=0&onvif=0.sdp?real_stream
-      - "ffmpeg:dvor_gates_hq#video=h264#hardware#audio=opus"
+      - "ffmpeg:dvor_gates_hq#audio=opus#video=h264#hardware"
     dvor_gates_lq:
       - rtsp://192.168.108.150:554/user=admin_password=A2DyfFrG_channel=0_stream=1&onvif=0.sdp?real_stream
-      - "ffmpeg:dvor_gates_lq#video=h264#hardware#audio=opus"
+      - "ffmpeg:dvor_gates_lq#audio=opus#video=h264#hardware"
     dom2_hq:
       - rtsp://192.168.108.122:554/user=admin_password=A2DyfFrG_channel=0_stream=0&onvif=0.sdp?real_stream
-      - "ffmpeg:dom2_hq#video=h264#hardware#audio=opus"
+      - "ffmpeg:dom2_hq#audio=opus#video=h264#hardware"
     dom2_lq:
       - rtsp://192.168.108.122:554/user=admin_password=A2DyfFrG_channel=0_stream=0&onvif=0.sdp?real_stream
-      - "ffmpeg:dom2_lq#video=h264#hardware#audio=opus"
+      - "ffmpeg:dom2_lq#audio=opus#video=h264#hardware"
   webrtc:
     candidates:
       - 192.168.108.55:8555
