--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -200,32 +200,32 @@ cameras:
     zones:
       near_the_door:
         coordinates: 212,360,515,360,517,326,257,318
-        inertia: 5
+        inertia: 10
         objects:
           - person
           - dog
           - car
       dvor:
         coordinates: 541,148,410,142,360,170,275,299,519,305
-        inertia: 5
+        inertia: 10
         objects:
           - car
           - person
       tropinka:
         coordinates: 598,202,576,52,553,51,550,201
-        inertia: 5
+        inertia: 10
         objects:
           - person
           - dog
       parkovka:
         coordinates: 552,141,538,21,366,33,363,138
-        inertia: 5
+        inertia: 10
         objects:
           - person
           - dog
       sad:
         coordinates: 348,195,326,0,68,67,0,89,0,360,187,360
-        inertia: 5
+        inertia: 10
         objects:
           - person
           - dog
@@ -258,6 +258,30 @@ cameras:
     webui_url: "http://192.168.108.150:8899/"
     motion:
       mask: []
+    zones:
+      inside_gates:
+        coordinates: 145,166,328,168,319,33,194,40
+        inertia: 10
+        objects:
+          - person
+          - dog
+          - car
+      at_the_door:
+        coordinates: 0,307,66,360,90,301,121,219,110,175,51,177
+        inertia: 10
+        objects:
+          - person
+      in_the_garden:
+        coordinates: 0,307,66,360,90,301,121,219,110,175,51,177
+        inertia: 10
+        objects:
+          - person
+      driveway:
+        coordinates: 89,360,333,360,321,231,136,228
+        inertia: 10
+        objects:
+          - person
+          - car
     mqtt:
       enabled: True
       timestamp: False
