--- a/kubernetes/apps/media/jellyseerr/app/pvc.yaml
+++ b/kubernetes/apps/media/jellyseerr/app/pvc.yaml
@@ -2,10 +2,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: jellyseerr
+  name: jellyseerr-config
 spec:
   accessModes: ["ReadWriteOnce"]
   resources:
     requests:
-      storage: 10Gi
+      storage: 5Gi
   storageClassName: longhorn-fast
