--- a/ansible/inventory/hosts.yaml
+++ b/ansible/inventory/hosts.yaml
@@ -11,3 +11,6 @@ kubernetes:
         "tau":
           ansible_user: "root"
           ansible_host: "192.168.108.199"
+        "weilai":
+          ansible_user: "root"
+          ansible_host: "192.168.108.209"
