--- a/kubernetes/apps/media/recyclarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/recyclarr/app/helmrelease.yaml
@@ -74,5 +74,5 @@ spec:
             readOnly: true
     service:
       main:
-        controllers: main
+        controller: main
         enabled: false
